--- a/client/src/Components/Footer.module.css
+++ b/client/src/Components/Footer.module.css
@@ -93,6 +93,7 @@
     list-style: none;
     color: var(--light-gray);
     transition: .5s ease;
+    width: max-content;
 }
 
 .Box li:hover {
@@ -167,6 +168,7 @@
     color: var(--light-gray);
     text-align: center;
     padding-bottom: 20px;
+    margin-bottom: 0;
 }
 
 @media (max-width:1100px) {
