--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -289,3 +289,8 @@
         font-size: 2.2em;
     }
 }
+@media screen and (max-width: 768px) {
+    .courses_info{
+        position: relative;
+    }
+}
