--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -94,6 +94,7 @@
 }
 .courses_St_Heading{
     font-family: var(--Heading-fonts);
+    color: var(--secondary-light);
     letter-spacing: 1px;
     margin: 30px 0 0 20px;
 }
@@ -114,9 +115,11 @@
     margin-right: 20px;
 }
 .courses_St_Info1 p span{
+    margin: 5px;
     color: var(--secondary-light);
 }
 .courses_St_Info2 p span{
+    margin: 5px;
     color: var(--secondary-light);
 }
 .courses_St_Info1 p:nth-child(1){
