--- a/client/src/Components/Footer.module.css
+++ b/client/src/Components/Footer.module.css
@@ -68,6 +68,7 @@
 }
 
 .FooterLink {
+    width: max-content;
     color: #fff;
     font-size: 20px;
     font-weight: 600;
@@ -81,7 +82,7 @@
     left: 0;
     bottom: -10px;
     height: 2px;
-    width: 100px;
+    width: 100%;
     background: var(--primary-light);
 }
 
