--- a/client/src/Components/Carousel.module.css
+++ b/client/src/Components/Carousel.module.css
@@ -17,6 +17,66 @@
   
   .rec-carousel-item:focus {
     outline: none;
-    box-shadow: inset 0 0 1px 0px violet;
+    /* box-shadow: inset 0 0 1px 0px violet; */
   }
-  
+  .MianCard{
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+  }
+  .cardHead{
+    height: 30px;
+    width: 200px;
+    border: 2px solid;
+    border-radius: 50px;
+    margin-left: 20%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: white;
+    font-size: 15px;
+    letter-spacing: 1px;
+    background-color: var(--primary-dark);
+  }
+  .cardImage{
+    height: 200px;
+    width: 60%;
+    margin-left: 20%;
+  }
+  .CardHeading{
+    font-weight: bold;
+    color: white;
+  }
+  .CardPara{
+    text-align: center ;
+    color: var(--primary-dark);
+  }
+  .CardLanguage{
+    height: 100px;
+    width: 70%;
+    margin-left: 15%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .Lang1{
+    height: 30px;
+    width: 40%;
+    border: 2px solid ;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:var(--primary-dark);
+    font-size: 14px;
+    font-weight: bold;
+  }
+  .cardimg{
+    height: 100%;
+    width: 100%;
+  }
