--- a/client/src/Components/Faqs.module.css
+++ b/client/src/Components/Faqs.module.css
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
 
 }
 
@@ -29,7 +30,7 @@
     min-height: 65px;
     width: 100%;
     /* border: solid 1px black; */
-    box-shadow: 0px 6px 8px rgb(42 104 129 / 6%);
+    box-shadow: 0px 6px 8px rgba(42, 104, 129, 0.11);
     margin-top: 15px;
     border-radius: 7px;
     display: flex;
@@ -38,10 +39,8 @@
     background-color: white;
     flex-direction: column;
     transition: all ease-out 0.30s;
-
-
-    
-    
+    /* border: solid 1px black; */
+   
 }
 
 .fp{
@@ -49,19 +48,22 @@
     height: max-content;
     width: 95%;
     margin-top: 10px;
+    color: var(--primary-gray);
 }
 
 .fi{
-    height:75%;
+    /* height:90px; */
     width:100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* border: solid 2px green; */
+    margin-top: 15px;
 }
 
 
 .f h5{
-    font-weight: 700;
+    font-weight: 400;
     padding-left: 25px;
 
 }
@@ -70,13 +72,15 @@
 
 
 .fpm{
-    margin-top: -16px;
+    /* margin-top: -16px; */
     font-size: 40px;
     color: var(--primary-light);
     cursor: pointer;
     transition: all linear 0.30s;
     margin-right: 20px;
+    font-weight: 100;
 
 }
+
 
 
