--- a/client/src/Components/ComCourses.module.css
+++ b/client/src/Components/ComCourses.module.css
@@ -1,7 +1,6 @@
 .Ccourses_main {
     height: max-content;
     width: 100%;
-    border: 1px solid;
     background-color: transparent;
 }
 .Ccourses_banner{
@@ -87,4 +86,51 @@
     border-radius: 0 7px 7px 0;
     height: 100%;
     background-color: var(--secondary-light);
+}
+.Ccourses_items{
+    width: 100%;
+    height: max-content;
+    padding: 70px 0 ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.Ccourses_item{
+    width: 90%;
+    height: max-content;
+    padding: 20px;
+    margin: 50px;
+    box-shadow: 0 0 5px 0 #eee;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.Ccourses_item_left{
+    width: 70%;
+    height: max-content;
+}
+.Ccourses_item_left h1{
+    color: blue;
+    font-family: var(--Heading-fonts);
+}
+.Ccourses_item_left p{
+    color: #999;
+}
+.Ccourses_item_left button{
+    width: max-content;
+    border: none;
+    background-color: transparent;
+    color: blue;
+    border-bottom: 2px solid blue;
+}
+.Ccourses_item_image{
+    width: 200px;
+    height: 200px;
+    margin-top: -150px;
+    background-color: red;
+}
+.Ccourses_item_image img{
+    width: 100%;
+    height: 100%;
 }
