--- a/client/src/Components/Faqs.module.css
+++ b/client/src/Components/Faqs.module.css
@@ -82,5 +82,20 @@
 
 }
 
+@media screen and (min-width: 320px) and (max-width:480px) {
+
+    .faq{
+        width: 90%;
+    }
+
+}
+
+@media screen and (min-width: 480px) and (max-width:769px) {
+
+    .faq{
+        width: 90%;
+    }
+
+}
 
 
