--- a/client/src/Components/Homeabout.module.css
+++ b/client/src/Components/Homeabout.module.css
@@ -46,6 +46,7 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
+    /* border: solid 1px black; */
 }
 
 .kp h2{
@@ -70,6 +71,26 @@
     height: 40px;
     width: 150px;
     background-color: white;
+}
+
+
+.kp button{
+    /* position: absolute; */
+    padding: 10px 20px;
+    /* bottom: 30px; */
+    /* left: 30px; */
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    background-size:300% 100%;
+    background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
+    border-radius: 5px;
+    transition: all .4s ease-in-out;
+  
+}
+.kp button:hover {
+    background-position:100% 0;
+    transition: all .4s ease-in-out;
 }
 
 @media screen and (min-width: 320px) and (max-width:480px) {
