--- a/client/src/Components/Courses.module.css
+++ b/client/src/Components/Courses.module.css
@@ -79,7 +79,7 @@
     background-color: var(--secondary-light);
 }
 .courses_St{
-    height: 100vh;
+    height: 760px;
     display: flex;
     align-items: center;
     justify-content: center;
