--- a/client/src/Components/Forget.module.css
+++ b/client/src/Components/Forget.module.css
@@ -25,7 +25,7 @@
 }
 .LogoutForm{
     position: absolute;
-    height: 400px;
+    height: 500px;
     width: 400px;
     backdrop-filter: blur(5px);
     background-color: rgba(245, 245, 245);
@@ -43,10 +43,13 @@
 .LogoutPlace::placeholder{
     font-size: 13px;
 }
+.LogoutPlace:nth-child(3){
+    pointer-events: none;
+}
 .LogoutBtn{
     position: absolute;
-    left: 20%;
-    width: 60%;
+    left: 10%;
+    width: 80%;
     border: none;
     background-size:300% 100%;
     background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
@@ -55,6 +58,7 @@
     color: #fff;
     cursor: pointer;
     font-size: 14px;
+    bottom: 5%;
 }
 .LogoutBtn:hover{
     background-position:100% 0;
