--- a/client/src/Components/Forget.module.css
+++ b/client/src/Components/Forget.module.css
@@ -36,15 +36,13 @@
 }
 .LogoutHead{
     margin-top: 10px;
-    font-size: 1.2em;
+    font-size: 1.7em;
     color: var(--primary-dark);
     font-weight: bold;
+    font-family: var(--Heading-fonts);
 }
 .LogoutPlace::placeholder{
     font-size: 13px;
-}
-.LogoutPlace:nth-child(3){
-    pointer-events: none;
 }
 .LogoutBtn{
     position: absolute;
