--- a/client/src/Components/Login.module.css
+++ b/client/src/Components/Login.module.css
@@ -48,8 +48,8 @@
 }
 .LoginBtn{
     position: absolute;
-    left: 20%;
-    width: 60%;
+    left: 10%;
+    width: 80%;
     border: none;
     background-size:300% 100%;
     background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
@@ -69,5 +69,18 @@
     cursor: pointer;
     position: absolute;
     bottom: 0;
-    left: 25%;
+    left: 10%;
+}
+.LoginAlready span:hover{
+    text-decoration: underline;
+}
+.ForgetPass{
+    position: absolute;
+    bottom: 0;
+    right: 10%;
+    color: var(--primary-light);
+    font-size: 14px;
+}
+.ForgetPass:hover{
+    text-decoration: underline;
 }
