--- a/client/src/Components/Faqs.module.css
+++ b/client/src/Components/Faqs.module.css
@@ -1,6 +1,7 @@
 
 .conta{
     height: max-content;
+    padding:50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,7 +23,9 @@
 
 .faq h1{
     margin-top: 20px;
+    /* font-size:30px; */
     margin-bottom: 40px;
+    font-family: var(--Heading-fonts);
 
 }
 
