--- a/client/src/Components/Homeabout.module.css
+++ b/client/src/Components/Homeabout.module.css
@@ -16,7 +16,7 @@
     height: 90%;
     width: 80%;
     background-size: cover;
-    background-image: url(https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNvbXB1dGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+    background-image: linear-gradient(rgb(25,67,118, .8), rgb(25,67,118, .8)), url("../images/Forms\ Background.png");
 }
 .twoside{
     height: 70%;
@@ -28,13 +28,6 @@
     background-image: url(https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNvbXB1dGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
 }
 
-.overlay{
-    background-color: rgba(0, 0, 0, 0.822);
-    height: 100%;
-    width: 100%;
-    position: absolute;
-
-}
 
 .kp{
     height: 65%;
@@ -50,28 +43,23 @@
 }
 
 .kp h2{
-    color: var(--primary-light);
     color: white;
-    font-weight: 100;
+    font-family: var(--Heading-fonts);
+    /* font-weight: 100; */
 
 }
 
 .kp h1{
-    color: white;
-    font-weight: 400;
-    font-size: 170%;
+    color: var(--primary-light);
+    font-size: 24px;
+    font-family: var(--Heading-fonts);
     width: 60%;
 }
 
 .kp p{
-    color: white;
+    color: rgb(223, 219, 219);
 }
 
-.kp button{
-    height: 40px;
-    width: 150px;
-    background-color: white;
-}
 
 
 .kp button{
@@ -83,7 +71,8 @@
     cursor: pointer;
     border: none;
     background-size:300% 100%;
-    background-image: linear-gradient(45deg, var(--primary-light), var(--secondary-light),#04befe);
+    background-color: white;
+    color:var(--primary-dark);
     border-radius: 5px;
     transition: all .4s ease-in-out;
   
