--- a/client/src/Components/Faqs.module.css
+++ b/client/src/Components/Faqs.module.css
@@ -17,8 +17,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
-
+ 
 }
 
 .faq h1{
@@ -30,10 +29,11 @@
 }
 
 .f{
-    min-height: 65px;
+    min-height: 50px;
     width: 100%;
     /* border: solid 1px black; */
-    box-shadow: 0px 6px 8px rgba(42, 104, 129, 0.11);
+    /* box-shadow:1px 5px 6px 8px rgba(42, 104, 129, 0.11); */
+    box-shadow: rgba(91, 110, 117, 0.151) 0px 6px 18px 0px;
     margin-top: 15px;
     border-radius: 7px;
     display: flex;
@@ -42,6 +42,7 @@
     background-color: white;
     flex-direction: column;
     transition: all ease-out 0.30s;
+    margin-top: 30px;
     /* border: solid 1px black; */
    
 }
@@ -55,11 +56,12 @@
 }
 
 .fi{
-    /* height:90px; */
+    height:45px !important;
     width:100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     /* border: solid 2px green; */
     margin-top: 15px;
 }
@@ -75,7 +77,7 @@
 
 
 .fpm{
-    /* margin-top: -16px; */
+    margin-top: -14px;
     font-size: 40px;
     color: var(--primary-light);
     cursor: pointer;
