--- a/client/src/Components/Carousel.module.css
+++ b/client/src/Components/Carousel.module.css
@@ -4,8 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    /* background-color: rgb(153, 153, 153); */
+    height: max-content;
   }
  
   .controls_wrapper {
