--- a/client/src/Components/ComCourses.module.css
+++ b/client/src/Components/ComCourses.module.css
@@ -55,37 +55,8 @@
     font-size: 1.1em;
     font-weight: lighter;
 }
-.Ccourses_bullets{
-    width: 80%;
-    height: max-content;    
-    margin: 0 60px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-}
 .Ccourses_banner_info_icons{
     color: var(--primary-light);
-}
-.Ccourses_bullets > div{
-    position: relative;
-    width: max-content;
-    height: max-content;
-    margin: 15px;
-    padding: 10px 25px;
-    border-radius: 7px;
-    background-color: white;
-    box-shadow: 0 0 15px 0 rgb(209, 207, 207);
-}
-.Ccourses_bullets div div{
-    position: absolute;
-    top: 0;
-    right: -4px;
-    z-index: -1;
-    width: 10px;
-    border-radius: 0 7px 7px 0;
-    height: 100%;
-    background-color: var(--secondary-light);
 }
 .Ccourses_items{
     width: 100%;
@@ -100,37 +71,47 @@
     width: 90%;
     height: max-content;
     padding: 20px;
-    margin: 50px;
-    box-shadow: 0 0 5px 0 #eee;
+    margin: 80px;
+    box-shadow: 0 0 10px 0 #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.Ccourses_item_main{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 .Ccourses_item_left{
-    width: 70%;
+    width: 75%;
     height: max-content;
 }
 .Ccourses_item_left h1{
-    color: blue;
+    color: var(--secondary-light);
+    font-size: 1.6em;
+    font-weight: bold;
     font-family: var(--Heading-fonts);
 }
 .Ccourses_item_left p{
     color: #999;
-}
-.Ccourses_item_left button{
-    width: max-content;
-    border: none;
-    background-color: transparent;
-    color: blue;
-    border-bottom: 2px solid blue;
+    margin: 15px 0;
 }
 .Ccourses_item_image{
-    width: 200px;
+    width: 300px;
+    margin: -50px 10px;
     height: 200px;
-    margin-top: -150px;
-    background-color: red;
+    margin-top: -160px;
+    background-color: white;
+    box-shadow: 0 0 5px 0 #eee;
 }
 .Ccourses_item_image img{
     width: 100%;
     height: 100%;
+    background-color: cover;
+}
+.Ccourses_item_carousel{
+    width: 100%;
+    height: max-content;
+    margin: 20px 0;
 }
