--- a/client/src/Components/Blogs.module.css
+++ b/client/src/Components/Blogs.module.css
@@ -61,8 +61,11 @@
     font-weight: bold;
     margin-bottom: 4px;
     margin-top: 8px;
+    margin-left: 10px;
 }
 .blogusrName:nth-child(2){
     color: var(--primary-dark);
     font-size: 16px;
+    margin-left: 10px;
+
 }
