--- a/client/src/Components/Blogs.module.css
+++ b/client/src/Components/Blogs.module.css
@@ -9,8 +9,7 @@
 
 .BlogCard {
     height: 350px;
-    width: 250px;
-    border: 1px solid;
+    width: 280px;
     border-radius: 10px;
     background-color: rgb(245, 245, 245);
     box-shadow: 0 0 10px 0 rgb(200, 200, 200);
@@ -18,7 +17,7 @@
     padding: 0;
     overflow: hidden;
     position: relative;
-    margin: 45px;
+    margin: 30px;
 }
 
 .BlogBackIma {
@@ -31,14 +30,14 @@
     width: 100%;
 }
 .BlogHeadUser{
-    height: 70px;
-    width: 160px;
-    border: 1px solid;
+    height: 60px;
+    width: 150px;
     position: absolute;
-    top: 22%;
+    top: 24%;
     left: 10%;
     border-radius: 5px;
-    background-color:whitesmoke;
+    background-color:white;
+    box-shadow: 0 5px 10px 0 rgb(200, 200, 200);
     display: flex;
     overflow: hidden;
 }
@@ -59,13 +58,48 @@
     color: var(--primary-dark);
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 4px;
-    margin-top: 8px;
+    margin-bottom: -5px;
+    margin-top: 5px;
     margin-left: 10px;
 }
 .blogusrName:nth-child(2){
-    color: var(--primary-dark);
-    font-size: 16px;
+    color: var(--primary-gray);
+    font-size: 14px;
     margin-left: 10px;
-
+}
+.Blogusrheading{
+    position: absolute;
+    top: 45%;
+    left: 10%;
+    color: var(--primary-dark);
+    font-size: 17px;
+}
+.BlogDesp{
+    position: absolute;
+    top: 53%;
+    left: 10%;
+    color: var(--primary-gray);
+}
+.BlogFooter{
+    height: 20%;
+    width: 100%;
+    background-color:#eee;
+    position: absolute;
+    bottom: 0;
+}
+.BolgDtime{
+    margin-left: 10%;
+    margin-top: 10px;
+    color: var(--primary-dark);
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+.BlogRef{
+    width: max-content;
+    margin: 0 10%;
+    padding: 2px 10px;
+    background-color: rgb(221, 221, 221);
+    border-radius: 5px;
+    font-size: 15px;
+    color: var(--primary-dark);
 }
