--- a/client/src/Components/Blogs.module.css
+++ b/client/src/Components/Blogs.module.css
@@ -79,27 +79,32 @@
     top: 53%;
     left: 10%;
     color: var(--primary-gray);
+    font-size: 15px;
 }
 .BlogFooter{
-    height: 20%;
+    height: 17%;
     width: 100%;
-    background-color:#eee;
+    background-color:var(--primary-dark);
     position: absolute;
     bottom: 0;
 }
 .BolgDtime{
-    margin-left: 10%;
-    margin-top: 10px;
-    color: var(--primary-dark);
-    font-size: 14px;
-    margin-bottom: 5px;
+    color: white;
+    font-size: 12px;
+    position: absolute;
+    right: 4%;
+    top: 40%;
 }
 .BlogRef{
     width: max-content;
-    margin: 0 10%;
+    margin: 20px 10%;
     padding: 2px 10px;
     background-color: rgb(221, 221, 221);
     border-radius: 5px;
-    font-size: 15px;
+    font-size: 14px;
     color: var(--primary-dark);
+    margin-bottom: 5px;
+}
+.BlogBook{
+    margin-top: -3px;
 }
