--- a/client/src/Components/SignUp.module.css
+++ b/client/src/Components/SignUp.module.css
@@ -27,9 +27,9 @@
 }
 .Uphead{
     margin-top: 20px;
-    font-size: 1.6em;
+    font-size: 1.7em;
     color: var(--primary-dark);
-    font-weight: bold;
+    font-family: var(--Heading-fonts);
 }
 .Signupform {
     position: absolute;
