--- a/client/src/Components/ComCourses.module.css
+++ b/client/src/Components/ComCourses.module.css
@@ -6,13 +6,11 @@
 .Ccourses_banner{
     height: 84vh;
     padding: 0;
+    background-image: url(../images/vector-main-courses/VExtor.png);
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.Ccourses_banner img{
-    width: 100%;
-    height: 100%;
 }
 .Ccourses_banner_info{
     display: flex;
@@ -57,6 +55,24 @@
 }
 .Ccourses_banner_info_icons{
     color: var(--primary-light);
+}
+.Ccourses_banners{
+    background-color: red;
+    margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.Ccourses_banners span{
+    margin: 10px;
+}
+.C_banner__icon_main{
+    width: 80px;
+    height: 40px;
+}
+.C_banner__icon_main img{
+    width: 100%;
+    height: 100%;
 }
 .Ccourses_items{
     width: 100%;
