--- a/client/src/Components/Homeabout.module.css
+++ b/client/src/Components/Homeabout.module.css
@@ -19,15 +19,18 @@
     background-image: linear-gradient(rgb(25,67,118, .8), rgb(25,67,118, .8)), url("../images/Forms\ Background.png");
 }
 .twoside{
-    height: 70%;
+    height: 80%;
     width: 55%;
-    background-color: white;
+    /* background-color: red; */
     margin-left: -27%;
     z-index: 10;
-    background-size: cover;
-    background-image: url(https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNvbXB1dGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+    background-color: transparent;
+    padding: 0;
 }
-
+.twoside video{
+    width: 100%;
+    height: 100%;
+}
 
 .kp{
     height: 65%;
@@ -118,6 +121,7 @@
          width: 90%;
          margin-top: -50%;
          margin-left: 0.5%;
+         /* border: solid 1px black; */
      }
 
     
