--- a/client/src/Components/Homeabout.module.css
+++ b/client/src/Components/Homeabout.module.css
@@ -19,14 +19,35 @@
     background-image: linear-gradient(rgb(25,67,118, .8), rgb(25,67,118, .8)), url("../images/Forms\ Background.png");
 }
 .twoside{
-    height: 80%;
+    height: 55%;
     width: 55%;
     /* background-color: red; */
     margin-left: -27%;
     z-index: 10;
     background-color: transparent;
     padding: 0;
+    border: solid 1px black;
+    background-color: blue;
+    
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.towside iframe{
+ overflow: hidden;
+ position: relative;
+}
+
+.btn{
+    z-index: 20;
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: green;
+}
+
 .twoside video{
     width: 100%;
     height: 100%;
@@ -121,7 +142,7 @@
          width: 90%;
          margin-top: -50%;
          margin-left: 0.5%;
-         /* border: solid 1px black; */
+
      }
 
     
