--- a/client/src/Components/Homeabout.module.css
+++ b/client/src/Components/Homeabout.module.css
@@ -4,6 +4,7 @@
 }
 
 .two{
+    position: relative;
     height:90vh;
     width: 100%;
     display: flex;
@@ -13,33 +14,39 @@
 
 .twoimg{
     position: relative;
-    height: 90%;
+    height: 80%;
     width: 80%;
     background-size: cover;
-    background-image: linear-gradient(rgb(25,67,118, .8), rgb(25,67,118, .8)), url("../images/Forms\ Background.png");
+    border-radius: 8px;
+    background-image: linear-gradient(rgba(18, 66, 125, 0.8), rgba(22, 73, 135, 0.8)), url("../images/Forms\ Background.png");
 }
-.twoside{
-    height: 55%;
-    width: 55%;
-    /* background-color: red; */
-    margin-left: -27%;
+.twovideo{
+    position: absolute;
+    width: 100%;
+    left:0%;
     z-index: 10;
     background-color: transparent;
     padding: 0;
-    border: solid 1px black;
-    background-color: blue;
-    
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 8px;
+    overflow: hidden;
 }
-
-.towside iframe{
- overflow: hidden;
- position: relative;
+.twovideo video{
+    display: none;
+    width:100%;
+    height:auto;  
+    border-radius: 8px;
 }
-
+.twovideo img{
+    display:none;
+    position: absolute;
+    width:60px;
+    height:auto;
+    cursor:pointer;
+    border-radius: 50%;;
+}
 .btn{
     z-index: 20;
     position: absolute;
@@ -48,24 +55,23 @@
     background-color: green;
 }
 
-.twoside video{
-    width: 100%;
-    height: 100%;
-}
-
 .kp{
-    height: 65%;
+    height: 80%;
     width: 55%;
     position: absolute;
     left: 5%;
-    top: 16%;
+    top: 10%;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
     /* border: solid 1px black; */
 }
-
+.kp img{
+    width:60px;
+    height:auto;
+    cursor:pointer;
+}
 .kp h2{
     color: white;
     font-family: var(--Heading-fonts);
@@ -84,21 +90,14 @@
     color: rgb(223, 219, 219);
 }
 
-
-
-.kp button{
-    /* position: absolute; */
-    padding: 10px 20px;
-    /* bottom: 30px; */
-    /* left: 30px; */
-    color: #fff;
+.kp span{
     cursor: pointer;
     border: none;
-    background-size:300% 100%;
-    background-color: white;
-    color:var(--primary-dark);
+   margin-top:-15px;
+    color:var(--primary-light);
     border-radius: 5px;
     transition: all .4s ease-in-out;
+    cursor:pointer;
   
 }
 .kp button:hover {
