Add sidebar To Blog

--- a/client/src/Components/Blogs.module.css
+++ b/client/src/Components/Blogs.module.css
@@ -1,9 +1,6 @@
 .MainBlogg {
     height: max-content;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
     padding: 0;
 }
 
@@ -17,7 +14,8 @@
     padding: 0;
     overflow: hidden;
     position: relative;
-    margin: 30px;
+    margin: 20px 45px ;
+    cursor: pointer;
 }
 
 .BlogBackIma {
@@ -29,31 +27,36 @@
     height: 100%;
     width: 100%;
 }
-.BlogHeadUser{
+
+.BlogHeadUser {
     height: 60px;
     width: 150px;
     position: absolute;
     top: 24%;
     left: 10%;
-    background-color:white;
+    background-color: white;
     box-shadow: 0 5px 10px 0 rgb(200, 200, 200);
     display: flex;
     overflow: hidden;
 }
-.Bloguserima{
+
+.Bloguserima {
     height: 100%;
     width: 45%;
 }
-.Blogusrinfo{
+
+.Blogusrinfo {
     height: 100%;
     width: 55%;
 
 }
-.Blogusrimg{
+
+.Blogusrimg {
     height: 100%;
     width: 100%;
 }
-.blogusrName:nth-child(1){
+
+.blogusrName:nth-child(1) {
     color: var(--primary-dark);
     font-size: 16px;
     font-weight: bold;
@@ -61,40 +64,46 @@
     margin-top: 5px;
     margin-left: 10px;
 }
-.blogusrName:nth-child(2){
+
+.blogusrName:nth-child(2) {
     color: var(--primary-gray);
     font-size: 14px;
     margin-left: 10px;
 }
-.Blogusrheading{
+
+.Blogusrheading {
     position: absolute;
     top: 45%;
     left: 10%;
     color: var(--primary-dark);
     font-size: 17px;
 }
-.BlogDesp{
+
+.BlogDesp {
     position: absolute;
     top: 53%;
     left: 10%;
     color: var(--primary-gray);
     font-size: 15px;
 }
-.BlogFooter{
+
+.BlogFooter {
     height: 17%;
     width: 100%;
-    background-color:var(--primary-dark);
+    background-color: var(--primary-dark);
     position: absolute;
     bottom: 0;
 }
-.BolgDtime{
+
+.BolgDtime {
     color: white;
     font-size: 12px;
     position: absolute;
     right: 4%;
     top: 40%;
 }
-.BlogRef{
+
+.BlogRef {
     width: max-content;
     margin: 20px 10%;
     padding: 2px 10px;
@@ -104,6 +113,40 @@
     color: var(--primary-dark);
     margin-bottom: 5px;
 }
-.BlogBook{
+
+.BlogBook {
     margin-top: -3px;
+}
+
+
+/* //////////////////////// Side Baar Style ////////////////////// */
+
+.blogItemMain {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.BlogSideBar {
+    position: sticky;
+    top: 0;
+    height: 655px;
+    width: 25%;
+    background-color: rgb(245, 245, 245);
+    box-shadow: 0 2px 5px 2px rgb(200, 200, 200);
+}
+.BlogSideHead{
+    color: var(--primary-dark);
+    font-size: 19px;
+    padding: 30px;
+}
+.BlogSideBar li{
+    list-style: none;
+    color: var(--primary-dark);
+    padding: 8px 30px;
+    font-size: 14px;
+    cursor: pointer;
+    width: max-content;
+}
+.BlogSideBar li:hover{
+    text-decoration: underline;
 }
