--- a/client/src/Components/ComCourses.module.css
+++ b/client/src/Components/ComCourses.module.css
@@ -6,7 +6,7 @@
 .Ccourses_banner{
     height: 84vh;
     padding: 0;
-    /* background-image: url(../images/vector-main-courses/VExtor.png); */
+    background-image: url(../images/vector-main-courses/VExtor.png);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -58,7 +58,7 @@
 }
 .Ccourses_banners{
     background-color: red;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,7 +77,6 @@
 .Ccourses_items{
     width: 100%;
     height: max-content;
-    padding: 70px 0 ;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,7 +86,7 @@
     width: 90%;
     height: max-content;
     padding: 20px;
-    margin: 80px;
+    margin: 60px;
     box-shadow: 0 0 10px 0 #eee;
     display: flex;
     flex-direction: column;
