--- a/client/src/Components/Roadmap.module.css
+++ b/client/src/Components/Roadmap.module.css
@@ -5,18 +5,19 @@
         align-items: center;
         /* border: solid 1px black; */
         flex-direction: row;
-        margin-top: 25px;
+        /* margin-top: px; */
         /* border: solid 1px black; */
         height: max-content;
     
     }
     .imgp{
-        height: 210px;
+        height: 270px;
         width: 49%;
         /* border: solid 1px green; */
         display: flex;
         justify-content:center;
         align-items: center;
+        margin-top: 30px;
         /* border: solid 1px black; */
         
     }
@@ -25,20 +26,21 @@
         
         border-radius: 0px 50px 0px 50px;
         height:100% ;
-        width:80%;
+        width:100%;
         /* border: solid 1px black; */
     
     }
     
     .pa{
         /* height:10%; */
-        height: 210px;
+        height: 200px;
         width: 49%;
         /* border: solid 1px green; */
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
+        margin-top: 30px;
         /* border: solid 1px black; */
     }
     
@@ -63,6 +65,8 @@
         line-height: 20px;
         word-spacing: 0.2px;
         /* border: solid 1px black; */
+        height: max-content;
+        /* width: 350px; */
     }
     
     
