--- a/client/src/Components/Events.module.css
+++ b/client/src/Components/Events.module.css
@@ -1,34 +1,39 @@
-.MainEventBanner{
+.MainEventBanner {
     height: 100vh;
     position: relative;
     padding: 0;
 }
-.MainVideo{
+
+.MainVideo {
     position: absolute;
     width: 100%;
 }
-.EventSection{
+
+.EventSection {
     height: max-content;
     display: flex;
     padding: 0;
     margin-top: 100px;
 }
-.EventSidebar{
-   position: sticky;
+
+.EventSidebar {
+    position: sticky;
     top: 0;
     height: 655px;
     width: 25%;
     background-color: rgb(245, 245, 245);
     box-shadow: 0 2px 5px 2px rgb(200, 200, 200);
 }
-.EventSideHead{
+
+.EventSideHead {
     color: var(--primary-dark);
     font-size: 25px;
     padding: 30px;
     padding-bottom: 10px;
     font-family: var(--Heading-fonts);
 }
-.EventSidebar li{
+
+.EventSidebar li {
     list-style: none;
     color: var(--secondary-light);
     padding: 8px 40px;
@@ -37,11 +42,91 @@
     width: max-content;
     transition: all .34s linear;
 }
-.EventSidebar li:hover{
+
+.EventSidebar li:hover {
     padding: 8px 50px;
 }
-.EventsGallery{
+
+.EventsGallery {
     height: 200vh;
-    background-color: yellow;
-   
+    background-color: rgb(245, 245, 245);
+}
+
+.Gallery_part1 {
+    height: 450px;
+    padding: 0;
+    margin: 45px;
+    position: relative;
+}
+
+.Gallery_part2 {
+    height: 450px;
+    background-color: green;
+    margin: 45px;
+
+}
+
+.Gallery_part1_img {
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+}
+
+.Gallery_part1_content {
+    position: absolute;
+    height: 250px;
+    width: 80%;
+    background-color: white;
+    bottom: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Eventimg {
+    height: 100%;
+    width: 100%;
+    transition: all .20s linear;
+}
+
+.EventOverlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-dark);
+    z-index: 1;
+    opacity: 0;
+    transition: all .20s linear;
+}
+
+.Gallery_part1_img:hover img {
+    transform: scale(1.05);
+}
+
+.Gallery_part1_img:hover .EventOverlay {
+    opacity: .3;
+}
+
+.content_inner {
+    height: 80%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.EventDate{
+    font-size: 15px;
+    color: var(--primary-dark);
+    font-family: var(--Heading-fonts);
+}
+.EventHEading{
+    font-size: 22px;
+    color: var(--primary-dark);
+    font-family: var(--Heading-fonts);
+}
+.EventDescreption{
+    font-size: 15px;
+    color:var(--Para-fonts);
 }
